fix: page overflowing in print view

--- a/src/style.css
+++ b/src/style.css
@@ -401,7 +401,6 @@ section {
   align-self: flex-end;
 }
 
-
 /* Layouts */
 .page {
   background: white;
@@ -431,33 +430,6 @@ section {
 .right-column {
   width: auto;
   overflow: hidden;
-}
-
-@media print {
-  body {
-    margin: 0;
-  }
-
-  .page {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    box-shadow: none;
-  }
-
-  section {
-    page-break-inside: avoid;
-  }
-
-  .fa-external-link {
-    display: none;
-  }
-
-  /* FIXME: Leaning on Header and Sections */
-  .page .resume-header
-  .page .resume-content {
-    padding: 0 22px 0 34px;
-  }
 }
 
 /* Components */
@@ -505,22 +477,34 @@ section {
   vertical-align: middle;
 }
 
-.references-container .fa {
-  font-size: 14px;
-}
-
-.education-container .location {
-  padding-bottom: 6px;
-  font-weight: 400;
-}
-
-.education-container .specialization {
-  text-transform: none;
-  font-style: italic;
-}
-
 .flex-container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+}
+
+/* Adjustments for Printing */
+@media print {
+  body {
+    margin: 0;
+  }
+
+  .page {
+    width: 90%; /* FIXME: Not sure why this overflows the page if set to 100% */
+    height: 100%;
+    margin: 0;
+    box-shadow: none;
+  }
+
+  section {
+    page-break-inside: avoid;
+  }
+
+  .profiles {
+    display: none;
+  }
+
+  .fa-external-link {
+    display: none;
+  }
 }
